Update footer link

--- a/bar-chart-race/index.html
+++ b/bar-chart-race/index.html
@@ -27,9 +27,19 @@
 
             <div id="chart"></div>
             <p style="margin-top: 2rem; color: #5c5c5c">
-                Data source:
-                <a href="https://data.gov.sg/dataset/resale-flat-prices"
-                    >Resale Flat Prices</a
+                Source:
+                <a
+                    href="https://data.gov.sg/dataset/resale-flat-prices"
+                    ref="noopener noreferrer"
+                    target="_blank"
+                    >data</a
+                >
+                |
+                <a
+                    href="https://github.com/MarkHershey/hdb-price-bar-chart-race"
+                    ref="noopener noreferrer"
+                    target="_blank"
+                    >code</a
                 >
             </p>
         </div>
