Add progress bar and play control

--- a/bar-chart-race/index.html
+++ b/bar-chart-race/index.html
@@ -24,7 +24,7 @@
                     (m<sup>2</sup>)</i
                 >
             </p>
-
+            <div id="control"></div>
             <div id="chart"></div>
             <p style="margin-top: 2rem; color: #5c5c5c">
                 Source:
