--- a/bar-chart-race/index.html
+++ b/bar-chart-race/index.html
@@ -3,7 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>HDB Flat Resale Price</title>
+        <!-- <title>HDB Flat Resale Price Chart</title> -->
+        <title>Explore Singapore's Priciest HDB Towns</title>
+        <!-- for SEO -->
+        <meta
+            name="description"
+            content="Explore Singapore's Priciest HDB Towns via Bar Chart Race from 2012 to 2023."
+        />
+        <meta name="author" content="Mark He Huang" />
+        <meta name="keywords" content="HDB, Singapore, Resale Price, HDB Price, Bar Chart Race" />
+        <meta name="robots" content="index, follow" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -13,21 +22,22 @@
     </head>
     <body>
         <div id="app">
-            <h1>What are the most expensive HDB towns in Singapore?</h1>
+            <!-- <h1>What are the most expensive HDB towns in Singapore?</h1> -->
+            <h1>Explore Singapore's Priciest HDB Towns</h1>
             <p style="color: #5c5c5c">
                 <i>
-                    based on official resale flat price data published by the
+                    based on official resale flat price data published by
                     Housing and Development Board (HDB)
                 </i>
-                <i
-                    >, Unit: Singapore dollar (S$) / Square meters
-                    (m<sup>2</sup>)</i
+                <i></i>
+                    ; Unit: Singapore dollar per square meters
+                    (S$/m<sup>2</sup>)</i
                 >
             </p>
             <div id="control"></div>
             <div id="chart"></div>
             <p style="margin-top: 2rem; color: #5c5c5c">
-                Source:
+                source:
                 <a
                     href="https://beta.data.gov.sg/collections/189/view"
                     ref="noopener noreferrer"
