--- a/bar-chart-race/index.html
+++ b/bar-chart-race/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- <title>HDB Flat Resale Price Chart</title> -->
-        <title>Explore Singapore's Priciest HDB Towns</title>
-        <!-- for SEO -->
+        <title>Explore Singapore's Priciest HDB Towns Through Time</title>
         <meta
             name="description"
             content="Explore Singapore's Priciest HDB Towns via Bar Chart Race from 2012 to 2023."
@@ -23,7 +21,7 @@
     <body>
         <div id="app">
             <!-- <h1>What are the most expensive HDB towns in Singapore?</h1> -->
-            <h1>Explore Singapore's Priciest HDB Towns</h1>
+            <h1>Explore Singapore's Priciest HDB Towns Through Time</h1>
             <p style="color: #5c5c5c">
                 <i>
                     based on official resale flat price data published by
