--- a/bar-chart-race/index.html
+++ b/bar-chart-race/index.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Explore Singapore's Priciest HDB Towns Through Time</title>
+        <title>
+            Explore Singapore's Priciest HDB Towns Through Time | HDB Price
+            Trends 2012-Now
+        </title>
         <meta
             name="description"
-            content="Explore Singapore's Priciest HDB Towns via Bar Chart Race from 2012 to 2023."
+            content="Discover the most expensive HDB towns in Singapore with our interactive bar chart race. Visualize HDB resale price trends from 2012 to present and gain insights into housing market developments."
         />
         <meta name="author" content="Mark He Huang" />
-        <meta name="keywords" content="HDB, Singapore, Resale Price, HDB Price, Bar Chart Race" />
+        <meta
+            name="keywords"
+            content="HDB, Singapore, Resale Price, HDB Price, Housing Market, Price Trends, Bar Chart Race, Real Estate"
+        />
         <meta name="robots" content="index, follow" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
